--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,7 @@
 * {
-	bix-sizing: border-box;
-}
-
-body {
 	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .container {
@@ -59,3 +57,85 @@ body {
 	background-color: #FFA400;
 }
 
+/* Accordion styles - ScoreList.js */
+.accordion_wrapper {
+	font-family: sans-serif;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	flex-direction: column;
+	gap: 20px;
+  }
+  .sign {
+	font-size: 25px;
+  }
+  .scores {
+	width: 300px;
+	border: 1px solid rgb(133, 133, 133);
+  }
+  .categories {
+	font-weight: 600;
+	font-size: 18px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 15px 15px;
+	border: 2px solid rgb(133, 133, 133);
+	background-color: rgb(255, 255, 143);
+  }
+  .skills {
+	padding: 15px 5px;
+  }
+
+  /* Accordion styles - Accordion and AccordionItem */
+  .accordion_item.active .button {
+	background-color: #105057;
+  }
+
+  .answer_wrapper {
+	height: 0;
+	overflow: auto;
+  }
+
+  .answer_wrapper.open {
+	height:auto;
+  }
+
+  /* rating Stars */
+
+  .ratingStars_container {
+	padding: 16px;
+	margin: 16px auto;
+  }
+
+  .result {
+	text-align: center;
+	margin-bottom: 16px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .stars {
+	display: flex;
+	justify-content: center;
+	gap: 8px;
+  }
+
+  .star {
+	position: relative;
+	cursor: pointer;
+  }
+
+  .stars_radio-input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 1px;
+	height: 1px;
+	clip: rect(1px, 1px, 1px, 1px);
+  }
+
+  .stars_radio-input:checked ~ svg {
+	fill: yellow;
+  }
