--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,6 @@
 	font-family: sans-serif;
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	height: 100vh;
 	flex-direction: column;
 	gap: 20px;
@@ -71,7 +70,7 @@
 	font-size: 25px;
   }
   .scores {
-	width: 300px;
+	min-width: 300px;
 	border: 1px solid rgb(133, 133, 133);
   }
   .categories {
@@ -79,6 +78,8 @@
 	font-size: 18px;
 	cursor: pointer;
 	display: flex;
+	flex-wrap: wrap;
+	max-width: 1000px;
 	align-items: center;
 	justify-content: space-between;
 	padding: 15px 15px;
@@ -87,6 +88,16 @@
   }
   .skills {
 	padding: 15px 5px;
+  }
+
+  .homelogo {
+	scale: 300%
+  }
+
+  .skills_wrapper {
+	display: flex;
+	width:100%;
+	flex-wrap:wrap;
   }
 
   /* Accordion styles - Accordion and AccordionItem */
