--- a/src/styles.css
+++ b/src/styles.css
@@ -57,9 +57,24 @@
 	background-color: #FFA400;
 }
 
+.homelogo {
+	position: absolute;
+	width: 50%;
+	opacity: 40%;
+  }
+
+  .logo_holder{
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items:center;
+	width:100%;
+	bottom:30%;
+	z-index: -1;
+  }
+
 /* Accordion styles - ScoreList.js */
 .accordion_wrapper {
-	font-family: sans-serif;
 	display: flex;
 	align-items: center;
 	height: 100vh;
@@ -71,34 +86,49 @@
   }
   .scores {
 	min-width: 300px;
-	border: 1px solid rgb(133, 133, 133);
+	/*border: 1px solid rgb(133, 133, 133);*/
   }
   .categories {
-	font-weight: 600;
+	font-weight: lighter;
 	font-size: 18px;
-	cursor: pointer;
+	color: white;
 	display: flex;
 	flex-wrap: wrap;
 	max-width: 1000px;
 	align-items: center;
 	justify-content: space-between;
 	padding: 15px 15px;
-	border: 2px solid rgb(133, 133, 133);
-	background-color: rgb(255, 255, 143);
-  }
-  .skills {
-	padding: 15px 5px;
+	border-radius: 10px;
+	border: 2px solid white;
+	background-color: #666666;
+	box-shadow: none;
   }
 
-  .homelogo {
-	scale: 300%
+  .skills {
+	padding: 15px 5px;
   }
 
   .skills_wrapper {
 	display: flex;
 	width:100%;
 	flex-wrap:wrap;
+	justify-content: space-around;
   }
+
+ .score_button {
+	position:fixed;
+	bottom:45%;
+	right:15%;
+	width:200px;
+	height:70px;
+	
+	border-color: rgb(133, 133, 133);
+	
+ }
+
+ul{
+	list-style-type: none;
+}
 
   /* Accordion styles - Accordion and AccordionItem */
   .accordion_item.active .button {
@@ -148,5 +178,35 @@
   }
 
   .stars_radio-input:checked ~ svg {
-	fill: yellow;
+	fill: #FFA400;
+  }
+
+  /*  SearchBar */
+
+  .searchBar_container{
+	width:100%;
+	text-align: center;
+  }
+
+  .searchBar_container input{
+	width:30%;
+	padding: 7px 20px;
+	margin: 10px 10px;
+	border-radius: 4px;
+	border:2px solid #666666;
+	box-sizing: border-box;
+  }
+
+  .searchBar_container button{
+	padding: 7px 20px;
+	margin: 10px 0px;
+	border-radius: 4px;
+	border:2px solid #666666;
+	box-sizing: border-box;
+  }
+
+  .homeh1 {
+	font-weight: lighter;
+	letter-spacing: 5px;
+	text-shadow: 1px 1px 5px;
   }
